--- a/packages.ini
+++ b/packages.ini
@@ -1,1 +1,12 @@
-Test
+[Links]
+0=https://files.aero-nav.com/EDGG/Full_Package_20230224123428-230201-1.zip
+1=https://files.aero-nav.com/EDGG/Update_Sectorfile_20230224191712-230201-1.zip
+2=https://files.aero-nav.com/EDMM/AIRAC-Update_20230225100126-230201-2.zip
+3=https://files.aero-nav.com/EDMM/Full-Package_20230225100232-230201-2.zip
+4=https://files.aero-nav.com/EDMM/Full-Update_20230225100326-230201-2.zip
+5=https://files.aero-nav.com/EDWW/AIRAC_20230224213027-230201-1.zip
+6=https://files.aero-nav.com/EDWW/DFS_PACK_NG_20230224212722-230201-3.zip
+7=https://files.aero-nav.com/EDWW/DFS_UPDATE_PACK_20230224212824-230201-4.zip
+8=https://files.aero-nav.com/EDWW/EDBB_Setup_20230224212915-230201-2.zip
+9=https://files.aero-nav.com/EDWW/EDBB_Updates_20230224212953-230201-2.zip
+10=https://files.aero-nav.com/EDXX/FIS_20230224110157-230201-1.zip
