--- a/packages.ini
+++ b/packages.ini
@@ -1,5 +1,6 @@
 [Links]
 amount=10
+regions=3
 0=https://files.aero-nav.com/EDGG/Full_Package_20230224123428-230201-1.zip
 1=https://files.aero-nav.com/EDGG/Update_Sectorfile_20230224191712-230201-1.zip
 2=https://files.aero-nav.com/EDMM/AIRAC-Update_20230225100126-230201-2.zip
