--- a/ToolScope for EuroScope.csproj
+++ b/ToolScope for EuroScope.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{F40FD11A-DE63-4B1E-8233-BB7584B3846E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ToolScope_for_EuroScope</RootNamespace>
-    <AssemblyName>ToolScope for EuroScope</AssemblyName>
+    <AssemblyName>ToolScope.for.EuroScope</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
