--- a/updates/packages.ini
+++ b/updates/packages.ini
@@ -15,6 +15,8 @@ regions=3
 
 [Names]
 amount=10
+airacyear=23
+releaseyear=23
 0=https://files.aero-nav.com/EDGG/Full_Package_20230224123428-
 1=https://files.aero-nav.com/EDGG/Update_Sectorfile
 2=https://files.aero-nav.com/EDMM/AIRAC-Update
