--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="Bunifu.UI.WinForms" version="5.3.0" targetFramework="net472" />
   <package id="Costura.Fody" version="5.7.0" targetFramework="net472" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net472" developmentDependency="true" />
+  <package id="HtmlAgilityPack" version="1.11.46" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.1587.40" targetFramework="net472" />
