--- a/ToolScope for EuroScope.csproj
+++ b/ToolScope for EuroScope.csproj
@@ -313,6 +313,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountryNames.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="main.cs">
       <SubType>Form</SubType>
