--- a/updates/packages.ini
+++ b/updates/packages.ini
@@ -1,5 +1,16 @@
 [Links]
-amount=1
-0=https://files.aero-nav.com/EDGG/Update your ToolScope_20230224123428-230201-1.zip
+amount=10
+regions=3
+0=https://files.aero-nav.com/EDGG/Full_Package_20230224123428-230201-1.zip
+1=https://files.aero-nav.com/EDGG/Update_Sectorfile_20230224191712-230201-1.zip
+2=https://files.aero-nav.com/EDMM/AIRAC-Update_20230225100126-230201-2.zip
+3=https://files.aero-nav.com/EDMM/Full-Package_20230225100232-230201-2.zip
+4=https://files.aero-nav.com/EDMM/Full-Update_20230225100326-230201-2.zip
+5=https://files.aero-nav.com/EDWW/AIRAC_20230224213027-230201-1.zip
+6=https://files.aero-nav.com/EDWW/DFS_PACK_NG_20230224212722-230201-3.zip
+7=https://files.aero-nav.com/EDWW/DFS_UPDATE_PACK_20230224212824-230201-4.zip
+8=https://files.aero-nav.com/EDWW/EDBB_Setup_20230224212915-230201-2.zip
+9=https://files.aero-nav.com/EDWW/EDBB_Updates_20230224212953-230201-2.zip
+10=https://files.aero-nav.com/EDXX/FIS_20230224110157-230201-1.zip
 [Server]
 countries=ADRIA,AFRC,AFRX,CZEG,CZQQ,CZUL,CZVR,CZWG,CZYZ,DGAC,DNKK,DTTC,EBBU,EDXX,EETT,EHAA,EPWW,EURO,EVRR,EXCXO,FAXX,FBGR,FCCC,FIMM,FLFI,FMMM,FNAN,FQBE,FSSS,FTTT,FVHF,FWLL,FYWH,FZZA,GMMM,GOOO,GOOOO,GULF,GVSC,HAAA,HCSM,HECC,HHAA,HKNA,HSSS,HTDC,HUEC,LBSR,LCCC,LEXX,LFXX,LGGG,LHCC,LIXX,LKAA,LLLL,LOVV,LPPC,LPPO,LRBB,LSAS,LTXX,LZBB,OBBB,OEJD,OIIX,OJAC,OKAC,OLBB,OMAE,OOMM,OPXX,ORBB,OSTT,OYSC,SBXX,SCA,SEFG,SMPM,SOOO,SPIM,SRM,SYGC,TJZS,TNCF,UBBA,UDDD,UGGG,UKBV,URRV,UTDD,VGFR,FNSM,VXXX
