code optimization - removed useless variables - made more classes for better code viewing

--- a/ToolScope for EuroScope.csproj
+++ b/ToolScope for EuroScope.csproj
@@ -313,6 +313,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions\DataManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Functions\FileManager.cs">
       <SubType>Form</SubType>
     </Compile>
