--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
   release:
     name: "Release"
     runs-on: "ubuntu-latest"
+    permissions: write-all
     steps:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -21,5 +22,3 @@ jobs:
           files: |
             updates/release.zip
             updates/ToolScope.for.EuroScope.exe
-      - name: Checkout repository
-        uses: actions/checkout@v2.3.2
