--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,3 +21,13 @@ jobs:
           prerelease: false
           files: |
             release/*
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --release
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: '**/release/**'
+          tag: ${{ github.ref }}
+          overwrite: true
