--- a/updates/packages.ini
+++ b/updates/packages.ini
@@ -13,4 +13,5 @@ amount=10
 10=https://files.aero-nav.com/EDXX/FIS_20230224110157-230201-1.zip
 
 [Server]
-countries=ADRIA,AFRC,AFRX,CZEG,CZQQ,CZUL,CZVR,CZWG,CZYZ,DGAC,DNKK,DTTC,EBBU,EDXX,EETT,EHAA,EPWW,EURO,EVRR,EXCXO,FAXX,FBGR,FCCC,FIMM,FLFI,FMMM,FNAN,FQBE,FSSS,FTTT,FVHF,FWLL,FYWH,FZZA,GMMM,GOOO,GOOOO,GULF,GVSC,HAAA,HCSM,HECC,HHAA,HKNA,HSSS,HTDC,HUEC,LBSR,LCCC,LEXX,LFXX,LGGG,LHCC,LIXX,LKAA,LLLL,LOVV,LPPC,LPPO,LRBB,LSAS,LTXX,LZBB,OBBB,OEJD,OIIX,OJAC,OKAC,OLBB,OMAE,OOMM,OPXX,ORBB,OSTT,OYSC,SBXX,SCA,SEFG,SMPM,SOOO,SPIM,SRM,SYGC,TJZS,TNCF,UBBA,UDDD,UGGG,UKBV,URRV,UTDD,VGFR,FNSM,VXXX
+countries=ADRIA,AFRC,AFRX,CZEG,CZQQ,CZUL,CZVR,CZWG,CZYZ,DGAC,DNKK,DTTC,EBBU,EDXX,EETT,EHAA,EPWW,EURO,EVRR,EXCXO,FAXX,FBGR,FCCC,FIMM,FLFI,FMMM,FNAN,FQBE,FSSS,FTTT,FVHF,FWLL,FYWH,FZZA,GMMM,GOOO,GOOOO,GULF,GVSC,HAAA,HCSM,HECC,HHAA,HKNA,HSSS,HTDC,HUEC,LBSR,LCCC,LEX
+countries2=LFXX,LGGG,LHCC,LIXX,LKAA,LLLL,LOVV,LPPC,LPPO,LRBB,LSAS,LTXX,LZBB,OBBB,OEJD,OIIX,OJAC,OKAC,OLBB,OMAE,OOMM,OPXX,ORBB,OSTT,OYSC,SBXX,SCA,SEFG,SMPM,SOOO,SPIM,SRM,SYGC,TJZS,TNCF,UBBA,UDDD,UGGG,UKBV,URRV,UTDD,VGFR,FNSM,VXXX
