--- a/packages.config
+++ b/packages.config
@@ -5,7 +5,9 @@
   <package id="Costura.Fody" version="5.7.0" targetFramework="net472" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net472" developmentDependency="true" />
   <package id="HtmlAgilityPack" version="1.11.46" targetFramework="net472" />
+  <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net472" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.1587.40" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
