--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="Bunifu.UI.WinForms" version="5.3.0" targetFramework="net472" />
   <package id="Costura.Fody" version="5.7.0" targetFramework="net472" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net472" developmentDependency="true" />
+  <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.46" targetFramework="net472" />
   <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net472" />
