--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,14 @@ jobs:
     runs-on: "ubuntu-latest"
     permissions: write-all
     steps:
-      - uses: ChanTsune/release-with-commit@v2.8.0
-        with:
-          regexp: "Release ((\\d+([.]\\d+)*)-(alpha|beta|rc)\\d*)((\\s|\\S)*)"
-          regexp_options: "us"
-          release_name: "Version $1 - Stable Branch"
-          tag_name: "$1"
-          body: "$5"
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}' # This token is provided by Actions, you do not need to create your own token
+    - uses: fregante/release-with-changelog@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        title: Version {tag} - Stable
+        commit-template: '- {title} ← {hash}'
+        template: |
+          ### Changelog
+
+          {commits}
+
+          {range}
