Rename variables and refactor code
* rename variables (clientconfig to general)
* detect old clientconfig variable and replace it with general
* refactor code and move functions to classes

--- a/ToolScope for EuroScope.csproj
+++ b/ToolScope for EuroScope.csproj
@@ -330,7 +330,7 @@
   <ItemGroup>
     <Compile Include="Code\Core\Converters.cs" />
     <Compile Include="Code\Core\CountryNames.cs" />
-    <Compile Include="Code\Core\Objects.cs" />
+    <Compile Include="Code\Core\PowerShell.cs" />
     <Compile Include="Code\Core\Updater.cs" />
     <Compile Include="Code\Core\Variables.cs" />
     <Compile Include="Code\UI\Main.cs">
