--- a/ToolScope for EuroScope.csproj
+++ b/ToolScope for EuroScope.csproj
@@ -328,8 +328,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\Core\AIRAC Manager.cs" />
     <Compile Include="Code\Core\Converters.cs" />
-    <Compile Include="Code\Core\CountryNames.cs" />
+    <Compile Include="Code\Core\Notification.cs" />
+    <Compile Include="Code\Core\Package Handler.cs" />
     <Compile Include="Code\Core\PowerShell.cs" />
     <Compile Include="Code\Core\Updater.cs" />
     <Compile Include="Code\Core\Variables.cs" />
